--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     {
       "label": "Build & Test",
       "type": "shell",
-      "command": "./volpy"
+      "command": "ninja -Cbuild; ./build/driver_c"
     }
   ]
 }
